--- a/Front/index.html
+++ b/Front/index.html
@@ -31,21 +31,11 @@
     </div>
   </nav>
  
-<!--table-->
-<table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Nom</th>
-        <th scope="col">Prix</th>
-        <th scope="col">Description</th>
-        <th class="text-center" scope="col">Panier</th>
-      </tr>
-    </thead>
-    <tbody id="productList" >
-
-    </tbody>
-  </table>
+   
+  <div id="productList" class="row" >
+  </div> 
+    
+  
   
 
 
@@ -54,6 +44,7 @@
 
 
  <script src="test.js" ></script>
+
 </body>
 
 </html>
