--- a/Front/confirmationDeCommande.html
+++ b/Front/confirmationDeCommande.html
@@ -22,7 +22,7 @@
                 <a class="nav-link " aria-current="page" href="index.html">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="panier.html">Panier</a>
+                <a class="nav-link" href="panier.html?page=panier">Panier</a>
               </li>
             </ul>
           </div>
@@ -30,7 +30,8 @@
       </nav>
     
 
-        <div id="productListDescription" >
+        <div id="confirmationDeCommande" >
+
         </div>
 
       <script src="test.js" ></script>
