--- a/panier.html
+++ b/panier.html
@@ -31,11 +31,13 @@
       </div>
     </div>
   </nav>
- 
+  
 <div id="productListPanier">
 
 </div>
-  
+<div class="imgFond">
+
+</div>
   <div id="Commande">
 
   </div>
