--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <title> Orinoco</title>
 </head>
-<body class="container">
+<body class="">
   <nav class="navbar navbar-expand-lg navbar-light backLogo">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="img" src="./img/logoOrinoco.png" alt="logo orinoco"></a>
@@ -21,16 +21,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Accueil</a>
+            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="panier.html?page=panier">Panier</a>
+            
           </li>
         </ul>
+        <span class="navbar-text">
+          <a class="nav-link " aria-current="page" href="index.html">Accueil</a>
+          <a class="nav-link" href="panier.html?page=panier">Panier</a>
+        </span>
       </div>
     </div>
   </nav>
- 
+  <div class="imgFond">
+
+  </div>
    
   <div id="productList" class="row" >
   </div> 
